--- a/exercicios/modulo-03/ex022/fundo004.html
+++ b/exercicios/modulo-03/ex022/fundo004.html
@@ -15,10 +15,11 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-repeat: repeat-y; 
-            background-attachment: scroll;
+            background-attachment: scroll;  /*vínculo, rola junto com conteúdo ou fica fixo*/
             background-position: right bottom;
-            background-size: cover;
-            
+            background-size: cover;  /*auto, contain, tamanho em px e %*/
+
+            /*Short hand - background : color > image> position > repeat > [size] > attachment*/
             /* background: black url('imagens/wallpaper002.jpg') no-repeat fixed center center; */
         }
 
